Name:          forml
Version:       0.4
Synopsis:      A statically typed, functional programming language 
License:       MIT
Author:        Andrew Stein
Maintainer:    steinlink@gmail.com
Stability:     Experimental
Category:      Compiler
Build-type:    Custom
Cabal-version: >=1.8
homepage:      http://texodus.github.com/forml

Library
  hs-source-dirs: src/hs/lib
  Build-depends:
    base           == 4.5.*,
    parsec,    
    mtl            >= 2.1 && <= 2.2,
    jmacro         >= 0.6.3 && <0.7,
    containers     >= 0.4 && < 0.5,
    process        == 1.1.0.1,
    transformers   == 0.3.0.0,
    wl-pprint-text == 1.1.0.0,
    MissingH       == 1.2.0.0,
    directory
  ghc-options: 
    -Wall -fwarn-tabs -funbox-strict-fields
    -fno-warn-unused-do-bind -threaded
    -funfolding-use-threshold=16 -fexcess-precision
    -optc-O3 -optc-ffast-math        
  exposed-modules:  
    Forml.AST,
    Forml.AST.Expr,
    Forml.AST.Kind,
    Forml.AST.Lit,
    Forml.AST.Patt,
    Forml.AST.Record,
    Forml.AST.Replace,
    Forml.AST.Type,
    Forml.AST.Val,
    Forml.Exec,
    Forml.Javascript,
    Forml.Javascript.Cases,
    Forml.Javascript.Curried,
    Forml.Javascript.Expr,
    Forml.Javascript.Lit,
    Forml.Javascript.Match,
    Forml.Javascript.JMacro,
    Forml.Javascript.Record,
    Forml.Javascript.Type,
    Forml.Javascript.Val,
    Forml.Parse,
    Forml.Parse.Expr
    Forml.Parse.Indent,
    Forml.Parse.Lit,
    Forml.Parse.Macro,
    Forml.Parse.MacroToken,
    Forml.Parse.Patt,
    Forml.Parse.Record,
    Forml.Parse.Token,
    Forml.Parse.Type,
    Forml.Parse.Val,
    Forml.RenderText,
    Forml.TypeCheck,
    Forml.TypeCheck.Ass,
    Forml.TypeCheck.Generalize,
    Forml.TypeCheck.Kind,
    Forml.TypeCheck.Prelude,
    Forml.TypeCheck.Subst,
    Forml.TypeCheck.TypeCheck,
    Forml.TypeCheck.Unify,
    Forml.TypeCheck.Lit,
    Forml.TypeCheck.Patt,
    Forml.TypeCheck.Expr,
    Forml.Utils

Executable forml
  hs-source-dirs: src/hs/main
  main-is: Main.hs
  Build-depends:
    forml,
    base >= 4 && <= 5
  ghc-options: 
    -Wall -fwarn-tabs -funbox-strict-fields
    -fno-warn-unused-do-bind -threaded
    -funfolding-use-threshold=16 -fexcess-precision
    -optc-O3 -optc-ffast-math          
  
Test-Suite spec
  Type:           exitcode-stdio-1.0
  Hs-Source-Dirs: src/hs/test
  Ghc-Options:    -Wall -threaded
  Main-Is:        Spec.hs
  Build-Depends:
    base,
    hspec        >= 1.3,
    silently     >= 1.2.0.2 && <1.3,
    process      == 1.1.0.1,
    jmacro       >= 0.6.3 && <0.7,
    containers   >= 0.4 && < 0.5,
    QuickCheck,
    HUnit,
    parsec,
    forml

