Name:          minml
Version:       0.1
Synopsis:      A statically typed, functional programming language 
License:       MIT
Author:        Andrew Stein
Maintainer:    steinlink@gmail.com
Stability:     Experimental
Category:      Compiler
Build-type:    Custom
Cabal-version: >=1.8
homepage:      http://texodus.github.com/minml

Library
  hs-source-dirs: src/hs/lib
  Build-depends:
    base           ,
    bytestring     ,
    cmdlib         == 0.3.5,
    file-embed     == 0.0.5,
    parsec         ,
    utf8-string    ,    
    mtl            >= 2.1 && <= 2.2,
    jmacro         >= 0.6.3 && <0.7,
    containers     >= 0.5 && < 0.6,
    process        >= 1.1,
    transformers   == 0.3.0.0,
    wl-pprint-text == 1.1.0.0,
    lens           == 3.9.0.2,
    directory      >= 1.1

  ghc-options: 
    -Wall -fwarn-tabs -funbox-strict-fields
    -fno-warn-unused-do-bind -threaded
    -funfolding-use-threshold=16 -fexcess-precision
    -optc-O3 -optc-ffast-math       
  exposed-modules:  
    Minml.AST,
    Minml.AST.Expr,
    Minml.AST.Kind,
    Minml.AST.Lit,
    Minml.AST.Macro,
    Minml.AST.Meta,
    Minml.AST.Patt,
    Minml.AST.Record,
    Minml.AST.Replace,
    Minml.AST.Type,
    Minml.AST.Val,
    Minml.Compile,
    Minml.Config,
    Minml.Exec,
    Minml.Javascript,
    Minml.Javascript.Cases,
    Minml.Javascript.Curried,
    Minml.Javascript.Expr,
    Minml.Javascript.Lit,
    Minml.Javascript.Match,
    Minml.Javascript.Meta,
    Minml.Javascript.JMacro,
    Minml.Javascript.Record,
    Minml.Javascript.Type,
    Minml.Javascript.Val,
    Minml.Macro.Infer,
    Minml.Macro.LetPatt,
    Minml.Macro.Cell,
    Minml.Macro.Replace,
    Minml.Macro.Scope,
    Minml.Parse,
    Minml.Parse.Expr
    Minml.Parse.Indent,
    Minml.Parse.Infix,
    Minml.Parse.Lit,
    Minml.Parse.Notation,
    Minml.Parse.Macro,
    Minml.Parse.MacroToken,
    Minml.Parse.Meta,
    Minml.Parse.Patt,
    Minml.Parse.Syntax
    Minml.Parse.Record,
    Minml.Parse.Token,
    Minml.Parse.Type,
    Minml.Parse.Val,
    Minml.Prelude,
    Minml.RenderText,
    Minml.TypeCheck,
    Minml.TypeCheck.Ass,
    Minml.TypeCheck.Generalize,
    Minml.TypeCheck.Kind,
    Minml.TypeCheck.Prelude,
    Minml.TypeCheck.Subst,
    Minml.TypeCheck.TypeCheck,
    Minml.TypeCheck.Unify,
    Minml.TypeCheck.Lit,
    Minml.TypeCheck.Patt,
    Minml.TypeCheck.Expr,
    Minml.Utils

Executable minml
  hs-source-dirs: src/hs/main
  main-is: Main.hs
  Build-depends:
    minml,
    base >= 4 && <= 5
  ghc-options: 
    -Wall -fwarn-tabs -funbox-strict-fields
    -fno-warn-unused-do-bind -threaded
    -funfolding-use-threshold=16 -fexcess-precision
    -optc-O3 -optc-ffast-math        
  
Test-Suite spec
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: src/hs/test
  Ghc-Options: -Wall -threaded -fbreak-on-exception
  Main-Is: Spec.hs
  Build-Depends:
    base,
    hspec        >= 1.3,
    silently     >= 1.2.0.2 && <1.3,
    process      == 1.1.0.2,
    jmacro       == 0.6.8,
    containers   >= 0.5 && < 0.6,
    interpolatedstring-perl6 >= 0.9.0,
    QuickCheck,
    HUnit,
    parsec,
    minml

